Fix spelling error

--- a/arch/arm64/boot/dts/rockchip/rk3568-nsy-g16-plus.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-nsy-g16-plus.dts
@@ -947,11 +947,11 @@
 };
 
 &pwm2 {
-	status = "disable";
+	status = "disabled";
 };
 
 &pwm3 {
-	status = "disable";
+	status = "disabled";
 };
 
 &power {
