--- a/arch/arm64/boot/dts/rockchip/rk3568-nsy-g68-plus.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-nsy-g68-plus.dts
@@ -951,11 +951,11 @@
 };
 
 &pwm2 {
-	status = "disable";
+	status = "disabled";
 };
 
 &pwm3 {
-	status = "disable";
+	status = "disabled";
 };
 
 &power {
