--- a/arch/arm64/boot/dts/rockchip/rk3568-bdy-g18-pro.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-bdy-g18-pro.dts
@@ -293,7 +293,7 @@
 		};
 	};
 
-    /* Fix the node name typo */
+	/* Fix the node name typo */
 	rtlgsw {
 		compatible = "realtek,rtl8367s";
 		realtek,mdio = <&mdio0>;
@@ -951,11 +951,11 @@
 };
 
 &pwm2 {
-	status = "disable";
+	status = "disabled";
 };
 
 &pwm3 {
-	status = "disable";
+	status = "disabled";
 };
 
 &power {
