--- a/arch/arm64/boot/dts/amlogic/meson-g12a-s905l3a-m401a.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-g12a-s905l3a-m401a.dts
@@ -25,6 +25,20 @@
 		regulator-boot-on;
 		regulator-always-on;
 	};
+
+	wifi32k: wifi32k {
+		compatible = "pwm-clock";
+		#clock-cells = <0>;
+		clock-frequency = <32768>;
+		pwms = <&pwm_ef 0 30518 0>; /* PWM_E at 32.768KHz */
+	};
+
+	sdio_pwrseq: sdio-pwrseq {
+		compatible = "mmc-pwrseq-simple";
+		reset-gpios = <&gpio GPIOX_6 GPIO_ACTIVE_LOW>;
+		clocks = <&wifi32k>;
+		clock-names = "ext_clock";
+	};
 	
 	leds {
 		compatible = "gpio-leds";
@@ -65,6 +79,45 @@
 
 &mali {
 	mali-supply=<&vddgpu>;
+};
+
+/* WIFIPWN */
+&pwm_ef{
+	status = "okay";
+	pinctrl-0 = <&pwm_e_pins>;
+	pinctrl-names = "default";
+	#clock-cells = <0>;
+}
+
+/* SDIO */
+&sd_emmc_a {
+	status = "okay";
+	pinctrl-0 = <&sdio_pins>;
+	pinctrl-1 = <&sdio_clk_gate_pins>;
+	pinctrl-names = "default", "clk-gate";
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	bus-width = <4>;
+	cap-sd-highspeed;
+	sd-uhs-sdr50;
+	max-frequency = <25000000>;
+
+	non-removable;
+	disable-wp;
+
+	/* WiFi firmware requires power to be kept while in suspend */
+	keep-power-in-suspend;
+
+	mmc-pwrseq = <&sdio_pwrseq>;
+
+	vmmc-supply = <&vddao_3v3>;
+	vqmmc-supply = <&vddao_1v8>;
+
+	wifi: wifi@1 {
+		reg = <1>;
+		compatible = "realtek,rtl8822cs";
+	};
 };
 
 /* SD card */
